--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "next": "15.5.3",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
     "react-type-animation": "^3.2.0"
